name:                emacswrapper
version:             0.1.1.0
synopsis:            Wrapper program to run Emacs in server mode on Windows.
description:         Emacswrapper is a wrapper program of Emacs on Windows.
                     It executes runemacs.exe in server mode if no Emacs is
                     running in server mode.
                     It runs emacsclientw.exe otherwise.
license:             OtherLicense
license-file:        LICENSE
author:              Iku Iwasa
maintainer:          iku.iwasa@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.rst,
                     emacswrapper.rc, emacswrapper.res,
                     images/emacs.ico, images/emacswrapper.ico
cabal-version:       >=1.2

executable emacswrapper
  main-is:             emacswrapper.hs
  ghc-options:         -Wall
  -- The following usage ld-option might be wrong,
  -- but is there any other way to specify .res file?
  ld-options:          -mwindows emacswrapper.res
  build-depends:       base >=4 && < 5,
                       directory,
                       filepath,
                       process >= 1.2,
                       Win32
  extra-libraries:     psapi
  other-modules:       Win32Utils
