name:                emacswrapper
version:             0.3.1.0
synopsis:            Wrapper program to timely run emacs or emacsclient
description:         Emacswrapper is a wrapper program of Emacs.
                     It executes emacs in server mode if no Emacs is running
                     in server mode.
                     Otherwise, it runs emacsclient.
license:             MIT
license-file:        LICENSE
author:              Iku Iwasa
maintainer:          iku.iwasa@gmail.com
category:            System
build-type:          Custom
extra-source-files:  README.rst, emacswrapper.rc,
                     images/emacs.ico, images/emacswrapper.ico
cabal-version:       >=1.2

executable ew
  main-is:             emacswrapper.hs
  build-depends:       base >=4 && < 5,
                       directory,
                       filepath,
                       process >= 1.2
  if os(windows)
    build-depends:     Win32
    ghc-options:       -Wall -O2 -optl dist/emacswrapper.res
    if arch(X86_64)
      cpp-options:     -DWINDOWS -DCALLCONV=ccall
    else
      cpp-options:     -DWINDOWS -DCALLCONV=stdcall
    ld-options:        -mwindows
    build-tools:       windres
    extra-libraries:   psapi
    other-modules:     Common Win32
  else
    ghc-options:       -Wall -O2
    build-depends:     unix
    other-modules:     Common Unix
